--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
     <section class="profile">
         <div class="img-container"></div>
         <div class="profile-body">
+
             <p class="name">Oscar Pullay</p>
+            
             <!--
                 <div class="parrafo contenedor1">
                     <h1>Programador.<span>&#160;</span></h1>
@@ -42,16 +44,19 @@
             <!--
                 <p class="role">Web Developer</p>
             -->
+           
+        </div>
+        <div class="actions">
+
             <div class="socials">
                 <!--
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
                     <a href="#"><i class="fab fa-twitter"></i></a>
                 -->
+                <a href="https://api.whatsapp.com/send?phone=593984864415"><i class="fas fa-paper-plane"></i></a>
                 <a href="https://www.linkedin.com/in/oscar-pullay-073917152/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
                 <a href="https://github.com/oscarepv" target="_blank" ><i class="fab fa-github"></i></a>
             </div>
-        </div>
-        <div class="actions">
             <!--
             <button>Download cv</button>
             <button>Contact me</button>
@@ -143,9 +148,7 @@
                 <div class="section-item">
                     <p class="title"><i class="fas fa-code"></i>CODING</p>
                     <ul>
-                        <li><i class="fas fa-check"></i>Html</li>
-                        <li><i class="fas fa-check"></i>Css</li>
-                        <li><i class="fas fa-check"></i>Javascript</li>
+                        <li><i class="fas fa-check"></i>Html, Css, Javascript</li>
                         <li><i class="fas fa-check"></i>Ionic</li>
                         <li><i class="fas fa-check"></i>Angular</li>
                         <li><i class="fas fa-check"></i>Java
@@ -178,7 +181,7 @@
                 <div class="section-item">
                     <p class="title"><i class="fas fa-tools"></i>TOOLS</p>
                     <ul>
-                        <li class="ui"><i class="fas fa-check"></i>FIGMA</li>
+                        <li class="ui"><i class="fas fa-check"></i>Adobe XD</li>
                         <li class="ui"><i class="fas fa-check"></i>GIT</li>
 
                     </ul>
